MODINV-1215 - No validation applied when edit "discoverySuppress", "staffSuppress" for deleted Instance via PUT {{url}}/inventory/instances/id (#866)